# Aegisure

./: .env.example  .gitignore  DECISIONS.md  DEMO.md  DEPLOY.md  LICENSE  PUBLISH.md  Procfile  README.md  VERIFY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: aegisure.yml.example
apps/backend/: Procfile  pyproject.toml  railway.json  requirements.txt
apps/backend/src/aegisure_backend/: __init__.py  db.py  main.py  security.py
apps/backend/tests/: test_api.py  test_pivot_api_routes.py  test_pivot_n3_auth_rls.py
apps/web/: package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/attribution/: page.tsx
apps/web/app/audit/: page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/memory-export/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/policies/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/provenance/: page.tsx
apps/web/app/repos/: page.tsx
apps/web/app/repos/[id]/constitution/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: audit-chat-panel.tsx  auth-actions.tsx  auth-capture.tsx  byok-form.tsx  faux-terminal.tsx  github-sign-in.tsx  install-command.tsx  onboarding-flow.tsx  sign-out-button.tsx  theme-toggle.tsx  ui.tsx
apps/web/lib/: api.ts  data.ts  supabase.ts
apps/web/tests/: auth-page.test.js  design-polish.test.js  live-data-pages.test.js  pivot-dashboard.test.js  supabase.test.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
