[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aegisure"
version = "0.1.0"
description = "Aegisure CLI and core engine for governing AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Aegisure" }]
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://aegisure.dev"
Repository = "https://github.com/Hetul803/Aegisure"
Documentation = "https://aegisure.dev/docs"

[project.scripts]
aegisure = "aegisure.cli:main"

[tool.pytest.ini_options]
testpaths = ["packages/aegisure/tests", "apps/backend/tests"]
pythonpath = ["packages/aegisure/src", "apps/backend/src"]
addopts = "-q"

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["packages/aegisure/src/aegisure", "packages/aegisure/src/aegisure_github"]

[tool.hatch.build.targets.sdist]
include = ["packages/aegisure/src", "README.md", "LICENSE"]
