[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aegisure-backend"
version = "0.1.0"
description = "FastAPI backend for Aegisure dashboard and GitHub App."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aegisure_backend"]
